--- a/src/components/runner-game.scss
+++ b/src/components/runner-game.scss
@@ -2,6 +2,8 @@
   width: 100%;
   height: 100%;
 
+  overflow: hidden;
+
   display: grid;
   grid-template-areas:
     'background-area'
@@ -10,6 +12,7 @@
 
   .background {
     grid-area: background-area;
+    position: relative;
 
     display: flex;
     align-items: flex-end;
